--- a/style.css
+++ b/style.css
@@ -17,9 +17,16 @@ header {
   margin-bottom: 40px;
 }
 
+
 header h1 {
   font-size: 2.5rem;
-  margin-bottom: 10px;
+  margin: 0;       
+  line-height: 1.1; 
+}
+
+header h2 {
+  margin: 0;       
+  line-height: 1.2;
 }
 
 nav a {
@@ -36,17 +43,17 @@ main {
   max-width: 800px;
   margin: 0 auto;
 }
-
+/*anything with .post is for main post (article) styling */
 .post {
-  background: #fff;
+  background: #ffffff;
   padding: 20px;
   margin-bottom: 30px;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.50);
 }
 
 .post h2 {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: #444;
 }
 
@@ -56,11 +63,6 @@ main {
   margin-bottom: 15px;
 }
 
-footer {
-  text-align: center;
-  margin-top: 40px;
-  color: #aaa;
-}
 
 .post h2 a {
   text-decoration: none;
@@ -106,8 +108,8 @@ footer {
   margin: 20px auto;
   border-radius: 6px;
 }
-
-  .code-box {
+/*this is the styling for the code boxes */
+  .code-box { 
       background-color: #6662628a;
       border: 1px solid #ccc;
       padding: 15px;
@@ -117,3 +119,9 @@ footer {
       overflow-x: auto;      
       border-radius: 5px;
   }
+/*styling for footer */
+  footer {
+  text-align: center;
+  margin-top: 40px;
+  color: #aaa;
+}
